--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "jshint": "^2.9.2",
     "mocha": "^3.1.2",
     "yargs": "^6.3.0"
+  },
+  "dependencies": {
+    "babel-plugin-transform-object-assign": "^6.8.0"
   }
 }
