--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "screenplay",
   "version": "0.0.1",
   "description": "A tiny Javascript library to timeline functions",
-  "homepage": "http://screenplay.jaysalvat.com",
+  "homepage": "https://github.com/jaysalvat/screenplay",
   "author": "Jay Salvat",
   "license": "MIT",
   "main": "dist/screenplay.js",
@@ -23,8 +23,6 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
     "gulp-bump": "^2.1.0",
-    "gulp-clean-css": "^2.0.13",
-    "gulp-cssmin": "^0.1.6",
     "gulp-header": "^1.8.2",
     "gulp-if": "^2.0.1",
     "gulp-jshint": "^2.0.1",
@@ -32,7 +30,6 @@
     "gulp-mocha": "^3.0.1",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.0",
-    "gulp-sass": "^2.3.1",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-sync": "^0.1.4",
     "gulp-uglify": "^2.0.0",
