--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "keywords": [],
   "devDependencies": {
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-es2015-modules-umd": "^6.18.0",
     "babel-preset-es2015-script": "^1.1.0",
     "chai": "^3.5.0",
     "del": "^2.2.0",
